--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <!--Tailwaind CCS-->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
-    <!-- Feather Icons -->
-    <script src="https://unpkg.com/feather-icons"></script>
-
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -47,13 +44,39 @@
       <h1>Once again happy birthday, Jes!</h1>
       <p class="item">May this year fill with happiness and joy! I hope you are doing well in Taiwan, being alone at another country is never easy but i'm sure you can go through this with your new friends and boyfriend (of course) by your side. Do you miss me? If yes, come back quickly!!! Even though it's nice to have a job, but don't push yourself too much yaa, don't forget to give yourself some time to heal from EVERYTHING.</p>
       <p class="item2">Going through a lot of things, you must remember that you can always reach your family and us. Can't wait to explore more of Jakarta together with you!!! Happy Sweet Nineteen, i wish you all the best and God bless you ♡</p>
+      <h2>More memories to be made together⁀જ➣</h2>
+    </section>
+    <section class="photos">
+      <img src="assets/polaroid1.png">
+      <img src="assets/polaroid2.png">
+      <img src="assets/polaroid3.png">
+    </section>
+    <section class="last">
+      <p class="p1">During our friendship, we've gone through many ups and downs. I'm grateful for your company despite my annoying behaviour haha, thank you for being my friend until now i hope we can be friend for many many years. Look forward to making even more unforgettable ones in the future.</p>
+      <p class="p2">Enjoy your special day, Jesslyn! Sorry for not being able to be there in person and giving you a proper gift, but I'm sending you all my love and best wishes! 𓇼 ⋆.˚ 𓆉 𓆝 𓆡⋆.˚ 𓇼</p>
     </section>
     </main>
-    <!-- Feather Icons -->
-    <script>
-      feather.replace();
-    </script>
 
+    <!-- Comments -->
+      <section id="contact" class="contact">
+        <div class="container">
+          <h2>Message for me ( •̯́ ₃ •̯̀)</h2>
+          <div class="contact-wrapper">
+            <div class="contact-form">
+              <form action="https://api.web3forms.com/submit" method="POST">
+                <input type="hidden" name="access_key" value="db6de048-4e5c-414e-b1d6-6588456732f5">
+                <div class="form-group">
+                  <textarea name="message" placeholder="Your Messsage"></textarea>
+                </div>
+                <button type="submit">Send</button>
+              </form>
+            </section>
+
+          <hr/>
+
+        <footer class="footer">
+          <p>© 2026 Michelle. Made With Love ♡</p>
+        </footer>
     <!-- JavaScript -->
     <script src="js/script.js"></script>
   </body>
