--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main></main>
     <main>
       <section class="home" id="home">
-        <main class="content" id="content">
+        <main class="content">
           <h1>Happy Birthday, Jesslyn!</h1>
           <p>
             This is only the beginning of your special day! Are you ready for
@@ -33,19 +33,21 @@
           <audio id="bgm" src="assets/audio.mp3" loop></audio>
         </main>
       </section>
-      <section class="title" id="title">
+      <!-- Surprise Section -->
+      <section class="title">
         <main class="content">
           <h1>Surprise!</h1>
           <p>Here's a virtual cake just for you! 🎂</p>
         </main>
       </section>
-      <div class="container">
-      <div class="cake" id="cake"></div>
-      <section class="yeay">
+      <section class="container">
+      <div class="cake"></div>
+      <div class="yeay">
       <h1>Once again happy birthday, Jes!</h1>
       <p class="item">May this year fill with happiness and joy! I hope you are doing well in Taiwan, being alone at another country is never easy but i'm sure you can go through this with your new friends and boyfriend (of course) by your side. Do you miss me? If yes, come back quickly!!! Even though it's nice to have a job, but don't push yourself too much yaa, don't forget to give yourself some time to heal from EVERYTHING.</p>
       <p class="item2">Going through a lot of things, you must remember that you can always reach your family and us. Can't wait to explore more of Jakarta together with you!!! Happy Sweet Nineteen, i wish you all the best and God bless you ♡</p>
       <h2>More memories to be made together⁀જ➣</h2>
+      </div>
     </section>
     <section class="photos">
       <img src="assets/polaroid1.png">
@@ -61,7 +63,7 @@
     <hr/>
 
     <!-- Comments -->
-      <section id="contact" class="contact">
+      <section class="contact">
         <div class="container">
           <h2>Message for me ( •̯́ ₃ •̯̀)</h2>
           <div class="contact-wrapper">
@@ -83,6 +85,5 @@
     <!-- JavaScript -->
     <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.4/dist/confetti.browser.min.js"></script>
-    
   </body>
 </html>
