--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </main>
       </section>
       <!-- Surprise Section -->
-      <section class="title">
+      <section class="title" id="title">
         <main class="content">
           <h1>Surprise!</h1>
           <p>Here's a virtual cake just for you! 🎂</p>
